feat: Add profile model, tests and fixtures

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: users
+#
+#  id            :bigint           not null, primary key
+#  status        :integer          default("unverified"), not null
+#  email         :citext           not null
+#  password_hash :string
+#
+# Indexes
+#
+#  index_users_on_email  (email) UNIQUE WHERE (status = ANY (ARRAY[1, 2]))
+#
 one:
   email: freddie@queen.com
   password_hash: <%= RodauthApp.rodauth.allocate.password_hash("password") %>
